** RELEASE 1.0.0 (Pending) **

* A 'format' matcher (html, json, etc)
* Ability to pass simple DSL options directly through the command-line, making DSL files optional
* Ability to run multiple Beaver DSL files at once

** RELEASE 0.0.1 (09/24/2011) **

* Initial release