@@ -1,8 +1,9 @@
 ** RELEASE 1.0.0 (Pending) **
 
-* A 'format' matcher (html, json, etc)
+* Added a response format parser and matcher (html, json, etc)
 * Ability to pass simple DSL options directly through the command-line, making DSL files optional
 * Ability to run multiple Beaver DSL files at once
+* Bugfixes
 
 ** RELEASE 0.0.1 (09/24/2011) **
 
